Exercise 3: add jQuery

--- a/index.html
+++ b/index.html
@@ -7,11 +7,15 @@
     <title>Exercise 1</title>
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-
 ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <script src="http://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-
+CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+    <script src='index.js'></script>
 </head>
 
 <body>
     <nav class="navbar navbar-expand-sm bg-light"></nav>
-    <div class="navbar-header"><a class="navbar-brand" href="#">Example 1 website</a>
+    <div class="navbar-header">
+        <a class="navbar-brand" href="#">Example 1 website</a>
     </div>
     <ul class="navbar-nav">
         <li class="nav-item">
@@ -24,7 +28,6 @@ ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="a
             <a class="nav-link" href="#">Link 3</a>
         </li>
     </ul>
-    </nav>
     <div class='container'>
         <p>
         <form id='nameform'>
